--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name localhost treasure.ghuboss.com www.treasure.ghuboss.com;
     root /usr/share/nginx/html;
     index index.html;
 
