--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -12,6 +12,10 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
+    location /administration/ {
+        try_files $uri $uri/ /index.html;
+    }
+
     # Cache static assets
     location /assets/ {
         expires 1y;
