--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "js-cookie": "^3.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router": "^7.6.0",
+    "react-router-dom": "^7.6.0",
     "styled-components": "^6.1.17"
   },
   "devDependencies": {
